# parmana

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GLOSSARY.md  GOVERNANCE.md  PROTOCOL.md  README.md  REFERENCE-IMPLEMENTATION.md  ROADMAP.md  SPECIFICATION.md  VISION.md  audit.md  build-errors.txt  claim.md  eslint.config.mjs  fix-errors.ps1  package-lock.json  package.json  resume.md  tsconfig.json  vendor-payment.json  vitest.config.ts
archive/runtime-legacy/: AuthorizationStage.ts
docs/: 000-CONSTITUTION.md  001-ARCHITECTURE.md  002-DOMAIN-MODEL.md  003-EXECUTION-TRANSACTION.md  004-VERIFICATION.md  005-CRYPTOGRAPHY.md  006-API.md  007-SDK.md  008-CLI.md  009-STORAGE.md  010-EVIDENCE.md  011-RUNTIME.md  012-RUNTIME-STAGES.md  013-VERIFICATION-ENGINE.md  014-EXECUTION-TRUST-MODEL.md  015-PLATFORM-ARCHITECTURE.md  016-PLATFORM-GUARANTEES.md  017-CONFORMANCE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_LOCK_v1.md  AUDIT.md  CANONICAL_CONTEXT.md  CLAIMS.md  DEVELOPMENT_STATUS.md  GOVERNANCE.md  GUARANTEES.md  LIFECYCLE.md  PROOFS.md  README.md  SECURITY.md  SPECIFICATION.md  SPEC_INDEX.md  TRUST_MODEL.md  VISION.md  tables.md
docs/adr/: ADR-0001-ExecutionTransaction-Aggregate.md  ADR-0002-Immutable-Domain-Model.md  ADR-0003-Verification-Is-Independent.md  ADR-0004-Runtime-Pipeline.md  ADR-0005-Evidence-Is-Append-Only.md  ADR-0006-Cryptographic-Agility.md  ADR-0007-Deterministic-Execution.md
docs/api/: 01-api-overview.md  02-request-response-model.md  03-error-model.md  04-openapi-v1.md
docs/architecture/: crypto-provider.md  execution-trust-cryptography.md  key-management.md  post-quantum-cryptography.md  receipt-cryptography.md
docs/audit/: Audit-028.md
docs/rfcs/: RFC-0000-TEMPLATE.md  RFC-0001-Policy-Engine.md  RFC-0002-Replay-Engine.md  RFC-0003-Human-Approval.md  RFC-0004-Post-Quantum-Cryptography.md  RFC-0005-Distributed-Verification.md  RFC-0006-Multi-Tenant-Runtime.md  RFC-0007-Agent-SDK.md  RFC-0007-Canonical-Trust-Chain-Domain-Model.md  RFC-0008-Canonical-Policy-Architecture.md  RFC-0008-Generic-Policy-Runtime-Architecture.md  RFC-0008-WASM-Runtime.md  RFC-0009-Policy-Versioning-and-Resolution.md  RFC-0009-Streaming-Evidence.md  RFC-0010-Execution-Proofs.md  RFC-0010-Policy-Schema-Evolution.md  RFC-0011-Deterministic-Policy-Execution-Architecture.md  RFC-0012-Phase-1-Architecture-Completion.md  RFC-0013-Policy-Execution-Pipeline.md  RFC-0014-Phase-1-Execution-Architecture.md  RFC-0016-Runtime-Service-Architecture.md  (+3 more)
examples/: README.md  package.json  tsconfig.json
keys/: dilithium3-private.key  dilithium3-public.key  ed25519-private.pem  ed25519-public.pem
openapi/: openapi.yaml
python/: README.md  pyproject.toml
python/.github/workflows/: ci.yml
python/docs/: 01_basic_execution.md  02_verify_receipt.md  03_replay_execution.md  06_autonomous_vehicle.md  08_financial_transaction.md  README.md
python/examples/: 00_sdk_info.py  01_basic_execution.py  01_health.py  02_execute.py  03_verify.py  04_replay.py  05_receipt.py  06_transaction.py  07_medical_ai.py  07_trust_record.py  08_financial_transaction.py  08_list_transactions.py
python/parmana/: __init__.py  client.py  exceptions.py  runtime.py  types.py  version.py
python/parmana.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/parmana/api/: __init__.py  execution_api.py  policy_api.py  receipt_api.py  replay_api.py  transaction_api.py  trust_record_api.py  verification_api.py
python/parmana/config/: client_config.py  transport.py
python/parmana/errors/: __init__.py  api_error.py  network_error.py  runtime_error.py
python/parmana/models/: __init__.py  authority.py  authorization.py  business_transaction.py  execution.py  intent.py  override.py  policy.py  receipt.py  replay.py  replay_result.py  trust_record.py  verification.py
python/parmana/serialization/: __init__.py  decoder.py  encoder.py
python/parmana/transport/: http_transport.py
python/tests/: test_client.py  test_decoder.py  test_encoder.py  test_execution_api.py  test_replay_api.py  test_verification_api.py
supabase/: config.toml
typescript/: README.md  package.json  resume.md  tsconfig.json
(+230 files in other folders)
