[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parmana"
version = "1.0.0"
description = "Python SDK for Parmana Execution Trust Infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Parmana" }
]

keywords = [
    "ai",
    "artificial-intelligence",
    "autonomous-ai",
    "agents",
    "governance",
    "authorization",
    "execution",
    "trust",
    "policy",
    "sdk"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/parmana-ai/parmana"
Documentation = "https://github.com/parmana-ai/parmana/tree/main/python"
Repository = "https://github.com/parmana-ai/parmana"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["parmana*"]