[build-system]
requires = [
    "setuptools>=69.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "parmana"
version = "1.0.5"
description = "Python SDK for Parmana Execution Trust Infrastructure."

readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.10"

license = { text = "Apache-2.0" }

authors = [
    { name = "Parmana" }
]

keywords = [
    "ai",
    "artificial-intelligence",
    "autonomous-ai",
    "agents",
    "governance",
    "authorization",
    "execution",
    "trust",
    "policy",
    "sdk"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",

    "License :: OSI Approved :: Apache Software License",

    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/pavancharak/parmana"
Documentation = "https://github.com/pavancharak/parmana/tree/main/docs"
Repository = "https://github.com/pavancharak/parmana"
Issues = "https://github.com/pavancharak/parmana/issues"
Releases = "https://github.com/pavancharak/parmana/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "parmana*",
]